{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 576,
  "lineage": "79cc61fb-4874-1270-8b21-f04286b1fc0a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0772b96ec961518e6",
            "arn": "arn:aws:ec2:eu-west-2:302205376299:elastic-ip/eipalloc-0772b96ec961518e6",
            "association_id": "eipassoc-0cf1a94d64da9e740",
            "domain": "vpc",
            "id": "eipalloc-0772b96ec961518e6",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0ab2bbe2476ac64f1",
            "private_dns": "ip-10-0-1-40.eu-west-2.compute.internal",
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-35-176-105-122.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.105.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f10c2d6bce70d90",
            "arn": "arn:aws:ec2:eu-west-2:302205376299:instance/i-02a958745241c9d38",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "session_manager_ec2_profile",
            "id": "i-02a958745241c9d38",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4a939057b114215",
            "private_dns": "ip-10-0-3-237.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-2:302205376299:key/f86be276-8b1d-4223-8262-6c5257c5710d",
                "throughput": 125,
                "volume_id": "vol-02d22074e2150df64",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099de7a8c5674101b",
            "tags": {
              "Name": "web-server"
            },
            "tags_all": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0acf2ab0c62253569"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.session_manager_role",
            "aws_security_group.ec2",
            "aws_security_group.lb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:internet-gateway/igw-003e3bffba837b743",
            "id": "igw-003e3bffba837b743",
            "owner_id": "302205376299",
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:loadbalancer/app/web-alb/fac4761fafce3b2d",
            "arn_suffix": "app/web-alb/fac4761fafce3b2d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-429474452.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:loadbalancer/app/web-alb/fac4761fafce3b2d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a1f04e2f6ace2216"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04464e932d58f44e0"
              },
              {
                "subnet_id": "subnet-0dd9f3ae9fbccd698"
              }
            ],
            "subnets": [
              "subnet-04464e932d58f44e0",
              "subnet-0dd9f3ae9fbccd698"
            ],
            "tags": {
              "Name": "WebALB"
            },
            "tags_all": {
              "Name": "WebALB"
            },
            "vpc_id": "vpc-0fd8db3e8dc8c26a6",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:listener/app/web-alb/fac4761fafce3b2d/4d5dfb2f4e842265",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:targetgroup/main-tg/c96ccba18bb7a932",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:listener/app/web-alb/fac4761fafce3b2d/4d5dfb2f4e842265",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:loadbalancer/app/web-alb/fac4761fafce3b2d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.lb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:targetgroup/main-tg/c96ccba18bb7a932",
            "arn_suffix": "targetgroup/main-tg/c96ccba18bb7a932",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:targetgroup/main-tg/c96ccba18bb7a932",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:302205376299:loadbalancer/app/web-alb/fac4761fafce3b2d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "main-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "lb-target-group"
            },
            "tags_all": {
              "Name": "lb-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:targetgroup/main-tg/c96ccba18bb7a932-20240514210228853200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:302205376299:targetgroup/main-tg/c96ccba18bb7a932",
            "target_id": "i-02a958745241c9d38"
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.session_manager_role",
            "aws_instance.web",
            "aws_lb_target_group.main",
            "aws_security_group.ec2",
            "aws_security_group.lb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0772b96ec961518e6",
            "association_id": "eipassoc-0cf1a94d64da9e740",
            "connectivity_type": "public",
            "id": "nat-0af56c141e9ae7bef",
            "network_interface_id": "eni-0ab2bbe2476ac64f1",
            "private_ip": "10.0.1.40",
            "public_ip": "35.176.105.122",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dd9f3ae9fbccd698"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:route-table/rtb-0cd8cf3b64b223110",
            "id": "rtb-0cd8cf3b64b223110",
            "owner_id": "302205376299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0af56c141e9ae7bef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:route-table/rtb-039a09bcd7c4d5330",
            "id": "rtb-039a09bcd7c4d5330",
            "owner_id": "302205376299",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003e3bffba837b743",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0def83d0ff113d14b",
            "route_table_id": "rtb-0cd8cf3b64b223110",
            "subnet_id": "subnet-099de7a8c5674101b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd492c5bb17bdc6",
            "route_table_id": "rtb-039a09bcd7c4d5330",
            "subnet_id": "subnet-0dd9f3ae9fbccd698"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016e645e86c2dc7ef",
            "route_table_id": "rtb-039a09bcd7c4d5330",
            "subnet_id": "subnet-04464e932d58f44e0"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:security-group/sg-0acf2ab0c62253569",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all traffic to the load balancer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acf2ab0c62253569",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from the load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1f04e2f6ace2216"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS traffic from the load balancer",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a1f04e2f6ace2216"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240514203818664400000008",
            "name_prefix": "terraform-",
            "owner_id": "302205376299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:security-group/sg-0b033d9d9aee4e2a9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b033d9d9aee4e2a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240514203816537300000002",
            "name_prefix": "terraform-",
            "owner_id": "302205376299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "endpoint-sg"
            },
            "tags_all": {
              "Name": "endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:security-group/sg-0a1f04e2f6ace2216",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1f04e2f6ace2216",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240514203816541600000003",
            "name_prefix": "terraform-",
            "owner_id": "302205376299",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg"
            },
            "tags_all": {
              "Name": "lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:subnet/subnet-099de7a8c5674101b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099de7a8c5674101b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "302205376299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_1"
            },
            "tags_all": {
              "Name": "private_1"
            },
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:subnet/subnet-0dd9f3ae9fbccd698",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd9f3ae9fbccd698",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302205376299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_1"
            },
            "tags_all": {
              "Name": "public_1"
            },
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:subnet/subnet-04464e932d58f44e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04464e932d58f44e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "302205376299",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_2"
            },
            "tags_all": {
              "Name": "public_2"
            },
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:vpc/vpc-0fd8db3e8dc8c26a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-000eeae4025142b4c",
            "default_route_table_id": "rtb-0b21f1b7c65e0ad2b",
            "default_security_group_id": "sg-0618f2c0fbe636110",
            "dhcp_options_id": "dopt-0372f0d1f763da190",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd8db3e8dc8c26a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b21f1b7c65e0ad2b",
            "owner_id": "302205376299"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2mmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:vpc-endpoint/vpce-00beef59e4bd19886",
            "dns_entry": [
              {
                "dns_name": "vpce-00beef59e4bd19886-9fkphvuj.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-00beef59e4bd19886-9fkphvuj-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z06706831PF48CCMST4PA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00beef59e4bd19886",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d9cf6ab0f3586845"
            ],
            "owner_id": "302205376299",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b033d9d9aee4e2a9"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-099de7a8c5674101b"
            ],
            "tags": {
              "Name": "ec2messages"
            },
            "tags_all": {
              "Name": "ec2messages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:vpc-endpoint/vpce-02fc5134c24f034c3",
            "dns_entry": [
              {
                "dns_name": "vpce-02fc5134c24f034c3-8idtde46.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-02fc5134c24f034c3-8idtde46-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z065331836IR3ZUU4GZ72"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02fc5134c24f034c3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0bdaffd764946c654"
            ],
            "owner_id": "302205376299",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b033d9d9aee4e2a9"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-099de7a8c5674101b"
            ],
            "tags": {
              "Name": "ssm"
            },
            "tags_all": {
              "Name": "ssm"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:302205376299:vpc-endpoint/vpce-0545447de861d43eb",
            "dns_entry": [
              {
                "dns_name": "vpce-0545447de861d43eb-u926fuj2.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0545447de861d43eb-u926fuj2-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z085431129368GL3G5A58"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0545447de861d43eb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00a0f3d60674dc2bd"
            ],
            "owner_id": "302205376299",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b033d9d9aee4e2a9"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-099de7a8c5674101b"
            ],
            "tags": {
              "Name": "ssmmessages"
            },
            "tags_all": {
              "Name": "ssmmessages"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0fd8db3e8dc8c26a6"
          },
          "dependencies": [
            "aws_security_group.endpoint",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}